# ohte2026

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: changelog.md  requirements.md  tuntikirjanpito.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: main.py
src/core/: hand.py  player.py  wall.py
src/game/: round_manager.py
src/tests/: test_hand.py
src/ui/: cli.py
